[package]
name = "tomato-exporter"
version = "0.9.1"
authors = ["Christopher Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
actix-web = "~4.9.0"
async-trait = "~0.1.83"
clap = { version = "~4.5", features = [ "cargo" ] }
dyn-clone = "~1.0.17"
futures = "~0.3.31"
maplit = "~1.0"
regex = "~1.11"
reqwest = { version = "~0.12", features = [ "rustls-tls" ], default-features = false }
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0.128"
time = "~0.3.36"
tracing = "~0.1.40"
tracing-actix-web = "~0.7.14"
tracing-log = "~0.2.0"
tracing-subscriber = "~0.3.18"
url = "~2.5.2"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.1"
