[package]
name = "tomato-exporter"
version = "0.9.1"
authors = ["Christopher Lieb <chris.lieb@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
actix-web = "~4.11.0"
async-trait = "~0.1.88"
clap = { version = "~4.5", features = [ "cargo" ] }
dyn-clone = "~1.0.19"
futures = "~0.3.31"
maplit = "~1.0"
regex = "~1.11"
reqwest = { version = "~0.12", features = [ "rustls-tls" ], default-features = false }
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0.140"
time = "~0.3.41"
tracing = "~0.1.41"
tracing-actix-web = "~0.7.18"
tracing-log = "~0.2.0"
tracing-subscriber = "~0.3.18"
url = "~2.5.4"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.1"
